--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+    background-color: #FF0077;
+}
 
+h1 {
+    color: white;
+    text-align: center;
+}
+
+p {
+    font-family: "Arial";
+    font-size: 200px;
+}
+</style>
+</head>
 <body>
-Memes
+<h1>memes</h1>
 </body>
 
 </html>
