style sheet added, changed index to notice difference

--- a/index.html
+++ b/index.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-    background-color: #FF0077;
-}
-
-h1 {
-    color: white;
-    text-align: center;
-}
-
-p {
-    font-family: "Arial";
-    font-size: 200px;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="http://lyreks.github.io/style.css">
 </head>
 <body>
-<h1>memes</h1>
+<h1>maymays</h1>
 </body>
-
 </html>
