--- a/PlayerInfoPanel2.html
+++ b/PlayerInfoPanel2.html
@@ -6,7 +6,7 @@
 		<style>
 			@font-face {
 				font-family: 'Bebas Kai';
-				src: url('fonts/BebasKai-Regular.otf');
+				src: url('http://lyreks.github.io/fonts/BebasKai-Regular.otf');
 			}
 
 			#piContainer {
@@ -184,10 +184,10 @@
 			</div>
 		</div>
 		<div id="eMLogoTop">
-			<image id="eMLogoTopIMG" src="images\eM_Logo_Top300144.png">
+			<image id="eMLogoTopIMG" src="http://lyreks.github.io/images/eM_Logo_Top300144.png">
 		</div>
 		<div id="eMLogoBottom">
-			<image id="eMLogoBottomIMG" src="images\eM_Logo_Bottom145.png">
+			<image id="eMLogoBottomIMG" src="http://lyreks.github.io/images/eM_Logo_Bottom145.png">
 		</div>
 	</body>
 </html>
