--- a/PlayerInfoPanel2.html
+++ b/PlayerInfoPanel2.html
@@ -8,6 +8,10 @@
 				font-family: 'Bebas Kai';
 				src: url('http://lyreks.github.io/fonts/BebasKai-Regular.otf');
 			}
+			
+			::-webkit-scrollbar { 
+    				display: none; 
+			}
 
 			#piContainer {
 				top: 265px;
