--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 @font-face {
    font-family:BebasKai;
-   src: url(BebasKai-Regular.ttf);
+   src: url('assets/BebasKai-Regular.ttf');
 }
 
 body {
@@ -76,7 +76,7 @@ a:active {
 	padding: 35px;
 }
 #header ul li a.logo {
-	background: url('images/ennymura-logo100.png');
+	background: url('assets/ennymura-logo100.png');
 	background-repeat: no-repeat;
 	width:100px;
 	height:100px;
@@ -278,7 +278,7 @@ a:active {
 	float:left;
 }
 #footer ul li a.logo {
-	background: url('images/ennymura-logo100.png');
+	background: url('assets/ennymura-logo100.png');
 	background-repeat: no-repeat;
 	width:100px;
 	height:100px;
@@ -315,11 +315,11 @@ a:active {
 	</div>
 	<div id="social">
 		<ul>
-			<li><a href="https://www.youtube.com/channel/UCy_e0slqziqIY9kW7jjPR-A"><img src="C:/Users/Lyreks/Desktop/website/images/youtube-circle.png"></li></a>
-			<li><a href="http://twitch.tv/ennymura"><img src="C:/Users/Lyreks/Desktop/website/images/twitch-circle.png"></li></a>
-			<li><a href="https://twitter.com/ennyMura"><img src="C:/Users/Lyreks/Desktop/website/images/twitter-circle.png"></li></a>
-			<li><a href="https://www.instagram.com/enny_mura/"><img src="C:/Users/Lyreks/Desktop/website/images/instagram-circle.png"></li></a>
-			<li><a href="https://www.facebook.com/ennymura/"><img src="C:/Users/Lyreks/Desktop/website/images/facebook-circle.png"></li></a>
+			<li><a href="https://www.youtube.com/channel/UCy_e0slqziqIY9kW7jjPR-A"><img src="assets/youtube-circle.png"></li></a>
+			<li><a href="http://twitch.tv/ennymura"><img src="assets/twitch-circle.png"></li></a>
+			<li><a href="https://twitter.com/ennyMura"><img src="assets/twitter-circle.png"></li></a>
+			<li><a href="https://www.instagram.com/enny_mura/"><img src="assets/instagram-circle.png"></li></a>
+			<li><a href="https://www.facebook.com/ennymura/"><img src="assets/facebook-circle.png"></li></a>
 		</ul>
 	</div>
 	<div id="header">
@@ -332,23 +332,23 @@ a:active {
 			<li><a href="#videos">Videos</a></li>
 			<li><a href="#store">Store</a></li>
 		</ul>
-		<img style="padding-left:65px" src="C:/Users/Lyreks/Desktop/website/images/line800.jpg">
+		<img style="padding-left:65px" src="assets/line800.jpg">
 	</div>
 	<div id="slideshow">
-		<a href="http://twitch.tv/ennymura"><img class="slide1" src="C:/Users/Lyreks/Desktop/website/images/temp-panel1.jpg"></a>
-		<a href="https://www.facebook.com/events/296863840668824/"><img class="slide2" src="C:/Users/Lyreks/Desktop/website/images/temp-panel2.jpg"></a>
-		<a href="https://www.facebook.com/events/1784193251857693/"><img class="slide3" src="C:/Users/Lyreks/Desktop/website/images/temp-panel3.jpg"></a>
-		<a href="http://www.daveandbusters.com/"><img class="slide4" src="C:/Users/Lyreks/Desktop/website/images/temp-panel4.jpg"></a>
+		<a href="http://twitch.tv/ennymura"><img class="slide1" src="assets/temp-panel1.jpg"></a>
+		<a href="https://www.facebook.com/events/296863840668824/"><img class="slide2" src="assets/temp-panel2.jpg"></a>
+		<a href="https://www.facebook.com/events/1784193251857693/"><img class="slide3" src="assets/temp-panel3.jpg"></a>
+		<a href="http://www.daveandbusters.com/"><img class="slide4" src="assets/temp-panel4.jpg"></a>
 	</div>
 	<div id="sponsors">
 		<img style="padding-left:40px" src="C:/Users/Lyreks/Desktop/website/images/line800.jpg">
 		<ul>
-			<li><a href="http://oomba.com"><img src="C:/Users/Lyreks/Desktop/website/images/oomba-logo160.png"></li></a>
-			<li><a href="https://www.instagram.com/geekshoeco/"><img src="C:/Users/Lyreks/Desktop/website/images/geekshoeco-logo160.png"></li></a>
-			<li><a href="https://anhonesthost.com"><img src="C:/Users/Lyreks/Desktop/website/images/anhonesthost-logo160.png"></li></a>
-			<li><a href="http://daveandbusters.com"><img src="C:/Users/Lyreks/Desktop/website/images/dnb-logo160.png"></li></a>
+			<li><a href="http://oomba.com"><img src="assets/oomba-logo160.png"></li></a>
+			<li><a href="https://www.instagram.com/geekshoeco/"><img src="assets/geekshoeco-logo160.png"></li></a>
+			<li><a href="https://anhonesthost.com"><img src="assets/anhonesthost-logo160.png"></li></a>
+			<li><a href="http://daveandbusters.com"><img src="assets/dnb-logo160.png"></li></a>
 		</ul>
-		<img style="padding-left:40px" src="C:/Users/Lyreks/Desktop/website/images/line800.jpg">
+		<img style="padding-left:40px" src="assets/line800.jpg">
 	</div>
 	<div id="updates">
 	Recent Updates<br>
@@ -372,11 +372,11 @@ a:active {
 		<li class="footer-element"><a href="#contact-us">Contact Us</a></li>
 		<li><a class="logo" href="index.html"></a></li>
 		<li class="footer-element" style="padding-right: 5px">Stay Up-To-Date</li>
-		<li class="social-footer"><a href="https://www.facebook.com/ennymura/"><img src="C:/Users/Lyreks/Desktop/website/images/facebook-circle.png"></li></a>
-		<li class="social-footer"><a href="https://www.instagram.com/enny_mura/"><img src="C:/Users/Lyreks/Desktop/website/images/instagram-circle.png"></li></a>
-		<li class="social-footer"><a href="https://twitter.com/ennyMura"><img src="C:/Users/Lyreks/Desktop/website/images/twitter-circle.png"></li></a>
-		<li class="social-footer"><a href="http://twitch.tv/ennymura"><img src="C:/Users/Lyreks/Desktop/website/images/twitch-circle.png"></li></a>
-		<li class="social-footer"><a href="https://www.youtube.com/channel/UCy_e0slqziqIY9kW7jjPR-A"><img src="C:/Users/Lyreks/Desktop/website/images/youtube-circle.png"></li></a>
+		<li class="social-footer"><a href="https://www.facebook.com/ennymura/"><img src="assets/facebook-circle.png"></li></a>
+		<li class="social-footer"><a href="https://www.instagram.com/enny_mura/"><img src="assets/instagram-circle.png"></li></a>
+		<li class="social-footer"><a href="https://twitter.com/ennyMura"><img src="assets/twitter-circle.png"></li></a>
+		<li class="social-footer"><a href="http://twitch.tv/ennymura"><img src="assets/twitch-circle.png"></li></a>
+		<li class="social-footer"><a href="https://www.youtube.com/channel/UCy_e0slqziqIY9kW7jjPR-A"><img src="assets/youtube-circle.png"></li></a>
 	</ul>
 	</div>
 </div>
