--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ a:active {
 	<div class="long-ad">
 	</div>
 	<div id="footer">
-	<img style="padding-left:80px" src="C:/Users/Lyreks/Desktop/website/images/line800.jpg">
+	<img style="padding-left:80px" src="assets/line800.jpg">
 	<ul>
 		<li class="footer-element"><a href="#about">About</a></li>
 		<li class="footer-element"><a href="#contact-us">Contact Us</a></li>
