--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 @font-face {
    font-family:BebasKai;
-   src: url(BebasKai-Regular.ttf);
+   src: url('assets/BebasKai-Regular.ttf');
 }
 
 body {
