--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ a:active {
 	padding: 35px;
 }
 #header ul li a.logo {
-	background: url('images/ennymura-logo100.png');
+	background: url('assets/ennymura-logo100.png');
 	background-repeat: no-repeat;
 	width:100px;
 	height:100px;
@@ -286,7 +286,7 @@ a:active {
 	float:left;
 }
 #footer ul li a.logo {
-	background: url('images/ennymura-logo100.png');
+	background: url('assets/ennymura-logo100.png');
 	background-repeat: no-repeat;
 	width:100px;
 	height:100px;
